--- a/.gitignore
+++ b/.gitignore
@@ -107,8 +107,8 @@ backup/
 *.swo
 *~
 
-# Package managers (keeping package-lock.json for consistent deployments)
-# package-lock.json (commented out - needed for GitHub Actions)
+# Package managers (excluding lock files due to platform-specific dependencies)
+package-lock.json
 yarn.lock
 pnpm-lock.yaml
 
